--- a/app/index.html
+++ b/app/index.html
@@ -4,39 +4,7 @@
   <meta charset="UTF-8">
   <title>TEC Events</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <style type="text/css">
-    body {
-      font-size: 18px;
-      line-height: 32px;
-    }
-    ul#eventsList {
-      border-top: 1px solid #aaa;
-    }
-    ul#eventsList li {
-      border-bottom: 1px solid #aaa;
-      padding: 2em 0;
-      margin: 0;
-      list-style: none;
-      text-align: left;
-    }
-    ul#eventsList ul {
-      margin: 0; padding: 0;
-    }
-    ul#eventsList ul li {
-      list-style: none;
-      text-align: left;
-      margin: 0;
-      padding: 0;
-      border: 0;
-    }
-    ul#eventsList ul li span {
-      display: inline-block;
-      width: 80px;
-    }
-    .desc {
-      margin-left: 80px;
-    }
-  </style>
+  <link rel="stylesheet" href="./app/assets/styles/styles.css">
 </head>
 <body>
   <script>
